// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the create mutation Check if you cannot duplicate entity according to attributes 1`] = `
Object {
  "userCreate": Object {
    "id": 25001,
    "name": "new user",
  },
}
`;

exports[`Test the create mutation Check that you can create a new instance of one entity 1`] = `
Array [
  "listGlobalBefore",
  "listBefore",
  "listAfter",
  "createGlobalBefore",
  "createBefore",
  "createAfter",
  "listGlobalBefore",
  "listBefore",
  "listAfter",
]
`;

exports[`Test the create mutation Check that you can create a new instance of one entity: Created user 1`] = `
Object {
  "__typename": "user",
  "id": 25001,
  "name": "new user",
}
`;

exports[`Test the create mutation Check that you can create a new instance of one entity: The new user 1`] = `Array []`;

exports[`Test the create mutation Check that you can create a new instance of one entity: User 12501 does not exists yet. 1`] = `Array []`;
